[tool.poetry]
name = "web-hw-11"
version = "0.1.0"
description = ""
authors = ["Maksius93 <m.g.fursa@gmail.com>"]
readme = "README.md"
packages = [{include = "web_hw_11"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.101.0"}
sqlalchemy = "^2.0.19"
asyncpg = "^0.28.0"
alembic = "^1.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
